fix page shift on hover

--- a/final-design-project/css/desktop.css
+++ b/final-design-project/css/desktop.css
@@ -1,19 +1,14 @@
-    .body-bottom h2{
-        font-size: 36px;
-    }
+.body-bottom h2{
+    font-size: 36px;
+}
    
-    .header-top .title{
+.header-top .title{
     position:static;
 }
 .header-bottom li{
     width: calc(100%/6 - 1px);
     margin-bottom: 0;
     margin-right: 0;
-}
-
-
-.hero{
-    transform: translateY(-13px);
 }
 
 
@@ -63,6 +58,10 @@
     transform: translateY(-30px);
 }
 
+
+.bigmonitor .text .title{
+    font-size: 36px;
+}
 
 
 .footer-top .right .menu-bottom .item{
