--- a/final-design-project/css/layout.css
+++ b/final-design-project/css/layout.css
@@ -15,7 +15,7 @@
 }
 .body-middle{
     margin: 0 auto;
-    max-width: 58.75em;
+    max-width: 78.4375em;
 }
 
 
@@ -44,7 +44,7 @@
 .footer{
     padding-right: 10px;
     padding-left: 10px;
-    padding-top: 15px;
+    padding-top: 30px;
 }
 
 .footer-top{
