--- a/final-design-project/css/style.css
+++ b/final-design-project/css/style.css
@@ -1,5 +1,6 @@
 body{
     background-color: #ebebeb;
+    position: relative;
 }
 
 .header-top{
@@ -22,9 +23,6 @@ body{
     position: relative;
 }
 
-
-
-
 .page-title{
     font-size: 39px;
     color: #6017a3;
@@ -43,12 +41,12 @@ body{
     width: 50%;
 }
 .logo-box.footer-logo-box{
-    width: calc(25000/540 * 1%);
+    width: 100%;
 }
-
-.footer-logo-box .page-title, .footer-logo-box .page-description{
+.footer-logo-box p{
     color: #fff;
 }
+
 .right-menus{
     float: right;
     width: 50%;
@@ -57,9 +55,7 @@ body{
 }
 .right-menus .left{
     content: "";
-    /* display: table; */
     float: left;
-    /* position: relative; */
     position: absolute;
     top: 25%;
     height: 45px;
@@ -71,15 +67,12 @@ body{
 .right-menus .text{
     display: inline-block;
     font-size: 12px;
-    /* padding-right: 38px; */
-    /* color: #fff; */
     width: 100%;
 }
 
 
 
 .right-menus .item{
-    /* border-right: 1px solid #767676; */
     width: 100%;
     margin-bottom: 10px;
 }
@@ -90,13 +83,11 @@ body{
     display: none;
 }
 .right-menus .item:first-child .text{
-    /* color: red; */
     background: url(../images/pin.svg) top right no-repeat;
     background-size: contain;
 }
 
 .right-menus .item:last-child .text{
-    /* color: red; */
     background: url(../images/drop-down.svg) top right no-repeat;
     background-size: contain;
 }
@@ -117,12 +108,10 @@ body{
 
 .right-menus .item{
     float: left;
-    position: relative;
-    /* margin-right: 18px; */
+    /* position: relative; */
 }
 .right-menus .item:hover a{
     color: rgb(88, 21, 155);
-    /* padding-right: 38px; */
 }
 
 .right-menus .item a{
@@ -132,28 +121,24 @@ body{
     font-size: 11px;
 }
 
-
-
-
 .right-menus .search-box{
     display: table;
     clear: both;
     position: relative;
     top: 130px;
     right: 100%;
-    /* left: 0px; */
     width: 100%;
 }
 
 @media screen and (min-width: 419px){
     .right-menus .search-box{
         top: 80px;
+        margin-bottom: 15px;
     }
 }
 
 .right-menus .box{
     border: none;
-    /* width: 100%; */
     height: 45px;
     float: left;
     width: 85%;
@@ -299,7 +284,8 @@ body{
     height: 538px;
     background-repeat: repeat-y;
     z-index: 8;
-    margin-bottom: -23px;
+    margin-bottom: -13px;
+    border-bottom: 1px solid #5b595c;
 }
 
 
@@ -351,6 +337,7 @@ body{
     padding-right: 10px;
     padding-left: 10px;
     background-color: #2d2d2d;
+    border-bottom: 1px solid #1e1e1e;
 }
 .body-middle-wrapper{
     padding-right: 10px;
@@ -580,11 +567,6 @@ body{
 }
 
 
-
-
-
-
-
 .body-bottom .memberphotos .item:not(:last-child){
     margin-right: 8px;
 }
@@ -660,6 +642,8 @@ body{
 }
 
 
+
+
 .footer-top .right .menu-top li{
     float: left;
     padding-right: 10px;
@@ -682,8 +666,6 @@ body{
     border: 0;
     padding: 0;
 }
-
-
 
 
 .footer-top .left{
@@ -771,8 +753,6 @@ body{
     height: 10px;
     padding-right: 10px;
 }
-
-
 
 
 .dot {
